--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 .container {
     width: 100%;
     min-height: 100vh;
-    background: linear-gradient(135deg, #4203a9, #90bafc);
+    background: linear-gradient(135deg, black, #90bafc);
     color: white;
     padding: 10px;
 }
